{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 83,
  "lineage": "beff79d8-1d15-d8d8-a127-f18ef8cbcd50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:listener/app/this-alb/c90e1e430b831f73/2956909c39f202cf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:219961503718:listener/app/this-alb/c90e1e430b831f73/2956909c39f202cf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:loadbalancer/app/this-alb/c90e1e430b831f73",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this_alb",
            "aws_lb_target_group.Mg_TagetGroup",
            "aws_security_group.Mg_SG",
            "aws_subnet.Mg_Subnet",
            "aws_subnet.Mg_Subnet_2",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mg_Instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ca28e7c7b8f8be1",
            "arn": "arn:aws:ec2:us-east-2:219961503718:instance/i-04010cca561004a8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04010cca561004a8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Omii",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-018a7a094c9789b08",
            "private_dns": "ip-10-0-2-207.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.207",
            "public_dns": "ec2-18-218-90-126.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.90.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d6107a487f0eed9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01b1ee64831847096"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071aa95bf6822936b",
            "tags": {
              "Dev": "Mg",
              "Name": "Mg_Instance_1"
            },
            "tags_all": {
              "Dev": "Mg",
              "Name": "Mg_Instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b1ee64831847096"
            ]
          },
          "dependencies": [
            "aws_security_group.Mg_SG",
            "aws_subnet.Mg_Subnet",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mg_Instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ca28e7c7b8f8be1",
            "arn": "arn:aws:ec2:us-east-2:219961503718:instance/i-02b95b1fc79a4bad0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b95b1fc79a4bad0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Omii",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ee9f73a29bb9233",
            "private_dns": "ip-10-0-4-151.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.151",
            "public_dns": "ec2-18-219-97-90.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.97.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008503cc285c6963d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01b1ee64831847096"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cecc615509f2cc56",
            "tags": {
              "Name": "Mg_Instance_2"
            },
            "tags_all": {
              "Name": "Mg_Instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b1ee64831847096"
            ]
          },
          "dependencies": [
            "aws_security_group.Mg_SG",
            "aws_subnet.Mg_Subnet_2",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Mg_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:219961503718:internet-gateway/igw-03125f021564a6c00",
            "id": "igw-03125f021564a6c00",
            "owner_id": "219961503718",
            "tags": {
              "Dev": "Mg",
              "Name": "Mg_IGW"
            },
            "tags_all": {
              "Dev": "Mg",
              "Name": "Mg_IGW"
            },
            "vpc_id": "vpc-06487d1eeef153da6"
          },
          "dependencies": [
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:loadbalancer/app/this-alb/c90e1e430b831f73",
            "arn_suffix": "app/this-alb/c90e1e430b831f73",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "this-alb-841583966.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:219961503718:loadbalancer/app/this-alb/c90e1e430b831f73",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "this-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01b1ee64831847096"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071aa95bf6822936b"
              },
              {
                "subnet_id": "subnet-0cecc615509f2cc56"
              }
            ],
            "subnets": [
              "subnet-071aa95bf6822936b",
              "subnet-0cecc615509f2cc56"
            ],
            "tags": {
              "Name": "this-alb",
              "dev": "Mg"
            },
            "tags_all": {
              "Name": "this-alb",
              "dev": "Mg"
            },
            "vpc_id": "vpc-06487d1eeef153da6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.Mg_SG",
            "aws_subnet.Mg_Subnet",
            "aws_subnet.Mg_Subnet_2",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Mg_TagetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e",
            "arn_suffix": "targetgroup/MgTageGroup/0553ac48902d6b1e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MgTageGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06487d1eeef153da6"
          },
          "dependencies": [
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e-20240303073528548100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e",
            "target_id": "i-04010cca561004a8e"
          },
          "dependencies": [
            "aws_instance.Mg_Instance_1",
            "aws_lb_target_group.Mg_TagetGroup",
            "aws_security_group.Mg_SG",
            "aws_subnet.Mg_Subnet",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e-20240303073532496800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:219961503718:targetgroup/MgTageGroup/0553ac48902d6b1e",
            "target_id": "i-02b95b1fc79a4bad0"
          },
          "dependencies": [
            "aws_instance.Mg_Instance_2",
            "aws_lb_target_group.Mg_TagetGroup",
            "aws_security_group.Mg_SG",
            "aws_subnet.Mg_Subnet_2",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mg_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:219961503718:route-table/rtb-0c21b2c3f834716d1",
            "id": "rtb-0c21b2c3f834716d1",
            "owner_id": "219961503718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03125f021564a6c00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Dev": "Mg",
              "Name": "Mg_RouteTable"
            },
            "tags_all": {
              "Dev": "Mg",
              "Name": "Mg_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06487d1eeef153da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Mg_IGW",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_rt2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46f767f46bc9a88",
            "route_table_id": "rtb-0c21b2c3f834716d1",
            "subnet_id": "subnet-0cecc615509f2cc56"
          },
          "dependencies": [
            "aws_internet_gateway.Mg_IGW",
            "aws_route_table.Mg_RouteTable",
            "aws_subnet.Mg_Subnet_2",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098ae083ba0400716",
            "route_table_id": "rtb-0c21b2c3f834716d1",
            "subnet_id": "subnet-071aa95bf6822936b"
          },
          "dependencies": [
            "aws_internet_gateway.Mg_IGW",
            "aws_route_table.Mg_RouteTable",
            "aws_subnet.Mg_Subnet",
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Mg_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:219961503718:security-group/sg-01b1ee64831847096",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b1ee64831847096",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Mg_SG",
            "name_prefix": "",
            "owner_id": "219961503718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Dev": "Mg",
              "Name": "Mg_SG"
            },
            "tags_all": {
              "Dev": "Mg",
              "Name": "Mg_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06487d1eeef153da6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mg_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:219961503718:subnet/subnet-071aa95bf6822936b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071aa95bf6822936b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "219961503718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Mg",
              "name": "Mg_Subnet"
            },
            "tags_all": {
              "Dev": "Mg",
              "name": "Mg_Subnet"
            },
            "vpc_id": "vpc-06487d1eeef153da6"
          },
          "dependencies": [
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mg_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:219961503718:subnet/subnet-0cecc615509f2cc56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cecc615509f2cc56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "219961503718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Dev": "Mg",
              "name": "Mg_Subnet_2"
            },
            "tags_all": {
              "Dev": "Mg",
              "name": "Mg_Subnet_2"
            },
            "vpc_id": "vpc-06487d1eeef153da6"
          },
          "dependencies": [
            "aws_vpc.Mg_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mg_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:219961503718:vpc/vpc-06487d1eeef153da6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007e762ad07cf8607",
            "default_route_table_id": "rtb-0a36e9b7afc3416f4",
            "default_security_group_id": "sg-09daaba3b73f9db06",
            "dhcp_options_id": "dopt-08ddfe9324ba8b875",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06487d1eeef153da6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a36e9b7afc3416f4",
            "owner_id": "219961503718",
            "tags": {
              "Dev": "Mg",
              "Name": "Mg_VPC"
            },
            "tags_all": {
              "Dev": "Mg",
              "Name": "Mg_VPC"
            }
          }
        }
      ]
    }
  ]
}